--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+.idea/.idea.Catan/.idea/vcs.xml
+.idea/.idea.Catan/.idea/workspace.xml
+ProjectSettings/RiderScriptEditorPersistedState.asset
+UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+UserSettings/Layouts/default-2021.dwlt
